Add Dataset.lastModified (#666)
* Add last_modified column to datasets table

* Add Dataset.lastModified

* Add Dataset.lastModified to API spec

* continued: Add Dataset.lastModified to API spec

* Set Dataset.lastModified on run completion

* Log modified datasets for run

* Ensure run has output datasets

* continued: Ensure run has output datasets

* Add incOrDecBy() on run completion

* continued: Add incOrDecBy() on run completion

* Add integration test for modified datasets
