# src/main/java/marquez/api/models/DbTableResponse.java
@@ -30,7 +30,8 @@ public final class DbTableResponse extends DatasetResponse {
       final String updatedAt,
       final String sourceName,
       @Nullable final List<Field> fields,
+      @Nullable final String lastModified,
       @Nullable final String description) {
-    super(name, physicalName, createdAt, updatedAt, sourceName, fields, description);
+    super(name, physicalName, createdAt, updatedAt, sourceName, fields, lastModified, description);
   }
 }
